fix bugs, add documentation, add substitutes and
