# docs/docs/openapi.yml
@@ -67,10 +67,17 @@ paths:
                   lastname:
                     type: string
                     example: Doe
-                  studentId:
-                    type: integer
-                  classId:
-                    type: integer
+                  associatedStudent:
+                    type: object
+                    properties:
+                      id:
+                        type: integer
+                        firstname:
+                          type: string
+                          example: John
+                        lastname:
+                          type: string
+                          example: Doe
 
         400:
           description: bad request
@@ -104,189 +111,15 @@ paths:
               schema:
                 type: string
               description: JWT Bearer Token
+          content:
+            text/plain:
+              schema:
+                type: string
+
         400:
           description: bad request
         401:
           description: bad credentials
-        502:
-          description: the Schulmanager servers returned something the server couldn't handle
-        504:
-          description: the Schulmanager servers didn't respond
-    delete:
-      security:
-        - bearerAuth: [ ]
-      description: logout
-      responses:
-        200:
-          description: Logged out successfully
-        400:
-          description: bad request
-        401:
-          description: logging in first is required
-        502:
-          description: the Schulmanager servers returned something the server couldn't handle
-        504:
-          description: the Schulmanager servers didn't respond
-
-  /courses:
-    get:
-      security:
-        - bearerAuth: [ ]
-      responses:
-        200:
-          description: successfully fetched courses
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  $ref: "#/components/schemas/course"
-        400:
-          description: bad request
-        401:
-          description: logging in first is required
-        502:
-          description: the Schulmanager servers returned something the server couldn't handle
-        504:
-          description: the Schulmanager servers didn't respond
-  /courses/{courseId}:
-    get:
-      security:
-        - bearerAuth: [ ]
-      parameters:
-        - name: courseId
-          in: path
-          schema:
-            type: integer
-      responses:
-        200:
-          description: successfully fetched course
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/course"
-        400:
-          description: bad request
-        401:
-          description: logging in first is required
-        502:
-          description: the Schulmanager servers returned something the server couldn't handle
-        504:
-          description: the Schulmanager servers didn't respond
-  /courses/{courseId}/units:
-    get:
-      security:
-        - bearerAuth: [ ]
-      parameters:
-        - name: courseId
-          in: path
-          schema:
-            type: integer
-      responses:
-        200:
-          description: successfully fetched units
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  type: object
-                  properties:
-                    id:
-                      type: integer
-                    name:
-                      type: string
-                    done:
-                      type: boolean
-        400:
-          description: bad request
-        401:
-          description: logging in first is required
-        502:
-          description: the Schulmanager servers returned something the server couldn't handle
-        504:
-          description: the Schulmanager servers didn't respond
-  /courses/{courseId}/units/{unitId}:
-    get:
-      security:
-        - bearerAuth: [ ]
-      parameters:
-        - name: courseId
-          in: path
-          schema:
-            type: integer
-        - name: unitId
-          in: path
-          schema:
-            type: integer
-      responses:
-        200:
-          description: successfully fetched unit
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  name:
-                    type: string
-                  done:
-                    type: boolean
-                  items:
-                    type: array
-                    items:
-                      type: object
-                      properties:
-                        id:
-                          type: integer
-                        type:
-                          type: string
-                          enum: [ text, attachments ]
-                        content:
-                          oneOf:
-                            - type: array
-                              items:
-                                type: object
-                                properties:
-                                  download:
-                                    type: string
-                                  filename:
-                                    type: string
-                                  contenttype:
-                                    type: string
-                            - type: string
-                              description: HTML text
-                              example: <p>Hello World!</p>
-
-        400:
-          description: bad request
-        401:
-          description: logging in first is required
-        502:
-          description: the Schulmanager servers returned something the server couldn't handle
-        504:
-          description: the Schulmanager servers didn't respond
-  /courses/undone:
-    get:
-      security:
-        - bearerAuth: [ ]
-      responses:
-        200:
-          description: successfully fetched units
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  type: object
-                  properties:
-                    id:
-                      type: integer
-                    name:
-                      type: string
-        400:
-          description: bad request
-        401:
-          description: logging in first is required
         502:
           description: the Schulmanager servers returned something the server couldn't handle
         504:
@@ -297,9 +130,15 @@ paths:
       security:
         - bearerAuth: [ ]
       parameters:
-        - name: week
+        - name: start
           schema:
-            type: integer
+            type: string
+            example: 2021-11-08
+          in: query
+        - name: end
+          schema:
+            type: string
+            example: 2021-11-14
           in: query
       responses:
         200:
@@ -311,104 +150,70 @@ paths:
                 items:
                   type: object
                   properties:
-                    day:
-                      type: integer
-                      example: 1
-                      description: day (Monday=0, Friday=4)
-                    period:
-                      type: integer
-                      example: 5
-                      description: period (1=0...MP=6;7=7...)
+                    date:
+                      type: string
+                      example: 2021-11-10
+                      description: date
+                    from:
+                      type: string
+                      example: 12:10:00
+                    to:
+                      type: string
+                      example: 12:55:00
                     room:
                       type: string
                       example: G053
-                    course:
-                      $ref: "#/components/schemas/course"
-                    isCancelled:
+                    cancelled:
                       type: boolean
-                    cancelComment:
-                      type: string
-                      required: false
-        400:
-          description: bad request
-        401:
-          description: logging in first is required
-        502:
-          description: the Schulmanager servers returned something the server couldn't handle
-        504:
-          description: the Schulmanager servers didn't respond
-
-  /messages:
-    get:
-      security:
-        - bearerAuth: [ ]
-      responses:
-        200:
-          description: successfully fetched messages
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  type: object
-                  properties:
-                    threadId:
-                      type: integer
+                      example: false
+                    substitue:
+                      type: boolean
+                      example: true
+                    substituted:
+                      type: object
+                      description: the original lesson
+                      properties:
+                        room:
+                          type: string
+                          example: G036
+                        subject:
+                          type: object
+                          properties:
+                            abbreviation:
+                              type: string
+                              example: E
+                            name:
+                              type: string
+                              example: English
+                            label:
+                              type: string
+                              example: E9
+                          teachers:
+                            type: array
+                            items:
+                              type: object
+                              properties:
+                                abbreviation:
+                                  type: string
+                                  example: D2
+                                firstname:
+                                  type: string
+                                  example: John2
+                                lastname:
+                                  type: string
+                                  example: Doe2
                     subject:
-                      type: string
-                    isPrivateChat:
-                      type: boolean
-                    allowsAnswers:
-                      type: boolean
-                    unread:
-                      type: integer
-        400:
-          description: bad request
-        401:
-          description: logging in first is required
-        502:
-          description: the Schulmanager servers returned something the server couldn't handle
-        504:
-          description: the Schulmanager servers didn't respond
-  /messages/{threadId}:
-    get:
-      security:
-        - bearerAuth: [ ]
-      parameters:
-        - name: threadId
-          in: path
-          schema:
-            type: integer
-      responses:
-        200:
-          description: successfully fetched thread
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  type: object
-                  properties:
-                    text:
-                      type: string
-                    sender:
                       type: object
                       properties:
-                        firstname:
+                        abbreviation:
                           type: string
-                        lastname:
+                          example: CS
+                        name:
                           type: string
-                    attachments:
-                      type: array
-                      items:
-                        type: object
-                        properties:
-                          download:
-                            type: string
-                          filename:
-                            type: string
-                          contenttype:
-                            type: string
+                          example: Computer Science
+                        label:
+                          type: string
+                          example: CS9
         400:
           description: bad request
         401:
@@ -417,32 +222,3 @@ paths:
           description: the Schulmanager servers returned something the server couldn't handle
         504:
           description: the Schulmanager servers didn't respond
-    post:
-      description: Send message
-      security:
-        - bearerAuth: [ ]
-      parameters:
-        - name: threadId
-          in: path
-          schema:
-            type: integer
-      requestBody:
-        content:
-          application/json:
-            schema:
-              type: object
-              properties:
-                text:
-                  type: string
-      responses:
-        200:
-          description: successfully sent message
-        400:
-          description: bad request
-        401:
-          description: logging in first is required
-        502:
-          description: the Schulmanager servers returned something the server couldn't handle
-        504:
-          description: the Schulmanager servers didn't respond
-
